--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-query": "^1.2.9",
     "@types/styled-components": "^5.1.26"
   }
 }
