--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "apexcharts": "^3.36.3",
+    "axios": "^1.2.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
@@ -43,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.6",
     "@types/react-query": "^1.2.9",
     "@types/styled-components": "^5.1.26"
   }
