--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-masterclass",
+  "name": "react-crypto-tracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -28,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +54,6 @@
     "@types/react-helmet": "^6.1.6",
     "@types/react-query": "^1.2.9",
     "@types/styled-components": "^5.1.26"
-  }
+  },
+  "homepage": "https://doraemon0807.github.io/react-crypto-tracker"
 }
